// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Main CRUD entity 1`] = `
{
  "Items": [
    {
      "description": "Test Item description",
      "endAt": "2024-12-31T12:00:00.000Z",
      "name": "Test-Item-1",
      "startAt": "2024-01-01T12:00:00.000Z",
    },
  ],
  "country": "de",
  "currency": "EUR",
  "description": "Test description- header",
  "name": "Test",
  "price": 44.44,
  "stock": 11,
}
`;

exports[`Main CRUD entity 2`] = `
{
  "stock": 11,
}
`;

exports[`Main CRUD entity 3`] = `
{
  "country": "de",
  "createdBy": "alice",
  "currency": "EUR",
  "description": "Test description- header",
  "modifiedBy": "alice",
  "name": "Test",
  "price": 44.44,
  "stock": 11,
}
`;

exports[`Main CRUD entity 4`] = `
{
  "Items": [
    {
      "description": "Test Item description",
      "endAt": "2024-12-31T12:00:00.000Z",
      "name": "Test-Item-1",
      "startAt": "2024-01-01T12:00:00.000Z",
    },
  ],
  "country": "de",
  "createdBy": "alice",
  "currency": "EUR",
  "description": "Test description- header",
  "modifiedBy": "alice",
  "name": "Test",
  "price": 44.44,
  "stock": 11,
}
`;

exports[`Main CRUD entity 5`] = `
{
  "Items": [
    {
      "description": "Test Item description - updated",
      "endAt": "2024-12-31T12:00:00.000Z",
      "name": "Test-Item-1",
      "startAt": "2024-01-01T12:00:00.000Z",
    },
  ],
  "country": "de",
  "currency": "EUR",
  "description": "Test description- header - updated",
  "name": "Test",
  "price": 44.44,
  "stock": 11,
}
`;

exports[`Main CRUD entity 6`] = `{}`;

exports[`Main CRUD entity 7`] = `{}`;

exports[`Main CRUD entity 8`] = `{}`;

exports[`Main CRUD entity 9`] = `
[
  {
    "country": "Switzerland",
    "createdBy": "anonymous",
    "currency": "CHF",
    "description": "This is a test Header",
    "modifiedBy": "anonymous",
    "name": "Header",
    "price": 12.34,
    "stock": 11,
  },
]
`;
